@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 7, 2008</p>
+      <p>Last Updated: November 11, 2008</p>
     </td>
   </tr>
 </table>
@@ -1167,10 +1167,11 @@ nuttx-0.3.18 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  communicate with my JTAG wiggler on Linux).
 	* Fix race condition workaround delay in LPC214X SPI logic.  It the cause of the very
 	  bad MMC/SD performance.
-	* Began port of the Hitachi SH-1 using the SH-1/US7032EVB1 board (this is a work in progress)
+	* Began port of the Hitachi SH-1 using the SH-1/US7032EVB1 board
 	* Re-built all configurations that use SDCC and Zilog toolchains to make sure they still
 	  build (they didn't, but they do now).
 	* Fixed several erroneous "list empty" checks in the CAN driver.
+	* Hitachi SH-1 passes (reduced) examples/ostest (examples/nsh still fails)
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
